--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
 {
-	"@platforms": ["android", "iPhone", "iPad"],
+	"@platforms": [
+		"android",
+		"iPhone",
+		"iPad"
+	],
 	"id": "H515444F0",/*应用的标识，创建应用时自动生成，勿手动修改*/
 	"name": "语音密码ORIDENS",/*应用名称，程序桌面图标名称*/
 	"version": {
-		"name": "1.3.4",/*应用版本名称*/
-		"code": "134"
+		"name": "1.3.5",/*应用版本名称*/
+		"code": "135"
 	},
 	"description": "语音密码ORIDENS",/*应用描述信息*/
 	"icons": {
@@ -18,91 +22,125 @@
 	},
 	"permissions": {
 		"Accelerometer": {
-            "description": "访问加速度感应器"
-        },
-        "Audio": {
-            "description": "访问麦克风"
-        },
-        "Cache": {
-            "description": "管理应用缓存"
-        },
-        "Camera": {
-            "description": "访问摄像头"
-        },
-        "Console": {
-            "description": "跟踪调试输出日志"
-        },
-        
-        "Device": {
-            "description": "访问设备信息"
-        },
-        "Downloader": {
-            "description": "文件下载管理"
-        },
-        "Events": {
-            "description": "应用扩展事件"
-        },
-        "File": {
-            "description": "访问本地文件系统"
-        },
-        "Gallery": {
-            "description": "访问系统相册"
-        },
-        "Geolocation": {
-            "description": "访问位置信息"
-        },
-         "Invocation": {
-            "description": "使用Native.js能力"
-        },
-        
-        "Orientation": {
-            "description": "访问方向感应器"
-        },
-        "Proximity": {
-            "description": "访问距离感应器"
-        },
-        "Storage": {
-            "description": "管理应用本地数据"
-        },
-        
-        "Uploader": {
-            "description": "管理文件上传任务"
-        },
-        "Runtime": {
-            "description": "访问运行期环境"
-        },
-        "XMLHttpRequest": {
-            "description": "跨域网络访问"
-        },
-        "Zip": {
-            "description": "文件压缩与解压缩"
-        },
-        "Barcode": {
-            "description": "管理二维码扫描插件"
-        },
-        
-        
-        "Webview":{
-        	"description": "窗口管理"
-        },
-        "NativeUI":{
-        	"description": "原生UI控件"
-        },
-        "Navigator":{
-        	"description": "浏览器信息"
-        },
-        "NativeObj":{
-        	"description": "原生对象"
-        },"Statistic":{},"Push":{},"Share":{}
+			"description": "访问加速度感应器"
+		},
+		"Audio": {
+			"description": "访问麦克风"
+		},
+		"Cache": {
+			"description": "管理应用缓存"
+		},
+		"Camera": {
+			"description": "访问摄像头"
+		},
+		"Console": {
+			"description": "跟踪调试输出日志"
+		},
+
+		"Device": {
+			"description": "访问设备信息"
+		},
+		"Downloader": {
+			"description": "文件下载管理"
+		},
+		"Events": {
+			"description": "应用扩展事件"
+		},
+		"File": {
+			"description": "访问本地文件系统"
+		},
+		"Gallery": {
+			"description": "访问系统相册"
+		},
+		"Geolocation": {
+			"description": "访问位置信息"
+		},
+		"Invocation": {
+			"description": "使用Native.js能力"
+		},
+
+		"Orientation": {
+			"description": "访问方向感应器"
+		},
+		"Proximity": {
+			"description": "访问距离感应器"
+		},
+		"Storage": {
+			"description": "管理应用本地数据"
+		},
+
+		"Uploader": {
+			"description": "管理文件上传任务"
+		},
+		"Runtime": {
+			"description": "访问运行期环境"
+		},
+		"XMLHttpRequest": {
+			"description": "跨域网络访问"
+		},
+		"Zip": {
+			"description": "文件压缩与解压缩"
+		},
+		"Barcode": {
+			"description": "管理二维码扫描插件"
+		},
+
+
+		"Webview": {
+			"description": "窗口管理"
+		},
+		"NativeUI": {
+			"description": "原生UI控件"
+		},
+		"Navigator": {
+			"description": "浏览器信息"
+		},
+		"NativeObj": {
+			"description": "原生对象"
+		},
+		"Statistic": {},
+		"Push": {},
+		"Share": {}
 	},
 	"plus": {
 		"splashscreen": {
 			"autoclose": true,/*是否自动关闭程序启动界面，true表示应用加载应用入口页面后自动关闭；false则需调plus.navigator.closeSplashscreen()关闭*/
-			"waiting": false,"delay":"0"
+			"waiting": false,
+			"delay": "0"
 		},
 		"runmode": "liberate",/*应用的首次启动运行模式，可取liberate或normal，liberate模式在第一次启动时将解压应用资源（Android平台File API才可正常访问_www目录）*/
 		"signature": "Sk9JTiBVUyBtYWlsdG86aHIyMDEzQGRjbG91ZC5pbw==",/*可选，保留给应用签名，暂不使用*/
-		"distribute": {"plugins":{"share":{"qq":{"appid":"100371282","description":"QQ分享"},"weixin":{"appid":"wx4868b35061f87885","appsecret":"64020361b8ec4c99936c0e3999a9f249","description":"可选，微信分享"}},"payment":{},"statics":{"umeng":{"appkey_ios":"59e5b9f71c5dd011e9000f8c","channelid_ios":"iOS","appkey_android":"59e5b9cfb27b0a1577000e31","channelid_android":"android"}},"push":{"igexin":{"appid":"nCVjUt2JPv6GW8QGotuLT2","appkey":"nWLK65b5WDAjCSvQGhYrM2","appsecret":"iec6jNzYETAwiUd7IVW7o9"}},"maps":{}},
+		"distribute": {
+			"plugins": {
+				"share": {
+					"qq": {
+						"appid": "100371282",
+						"description": "QQ分享"
+					},
+					"weixin": {
+						"appid": "wx4868b35061f87885",
+						"appsecret": "64020361b8ec4c99936c0e3999a9f249",
+						"description": "可选，微信分享"
+					}
+				},
+				"payment": {},
+				"statics": {
+					"umeng": {
+						"appkey_ios": "59e5b9f71c5dd011e9000f8c",
+						"channelid_ios": "iOS",
+						"appkey_android": "59e5b9cfb27b0a1577000e31",
+						"channelid_android": "android"
+					}
+				},
+				"push": {
+					"igexin": {
+						"appid": "nCVjUt2JPv6GW8QGotuLT2",
+						"appkey": "nWLK65b5WDAjCSvQGhYrM2",
+						"appsecret": "iec6jNzYETAwiUd7IVW7o9"
+					}
+				},
+				"maps": {}
+			},
 			"apple": {
 				"appid": "",/*iOS应用标识，苹果开发网站申请的appid，如io.dcloud.HelloH5*/
 				"mobileprovision": "",/*iOS应用打包配置文件*/
@@ -116,9 +154,39 @@
 				"keystore": "",/*Android应用打包使用的密钥库文件*/
 				"password": "",/*Android应用打包使用密钥库中证书的密码*/
 				"aliasname": "",/*Android应用打包使用密钥库中证书的别名*/
-				"permissions": ["<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>","<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>","<uses-permission android:name=\"android.permission.VIBRATE\"/>","<uses-permission android:name=\"android.permission.READ_LOGS\"/>","<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>","<uses-feature android:name=\"android.hardware.camera.autofocus\"/>","<uses-permission android:name=\"android.permission.SYSTEM_ALERT_WINDOW\"/>","<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>","<uses-permission android:name=\"android.permission.RECEIVE_BOOT_COMPLETED\"/>","<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.CAMERA\"/>","<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>","<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>","<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>","<uses-permission android:name=\"android.permission.INTERNET\"/>","<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>","<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>","<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>","<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>","<uses-permission android:name=\"android.permission.CALL_PHONE\"/>","<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>","<uses-feature android:name=\"android.hardware.camera\"/>","<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>","<uses-permission android:name=\"android.permission.RECEIVE_USER_PRESENT\"/>","<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>","<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"]
+				"permissions": [
+					"<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
+					"<uses-permission android:name=\"android.permission.VIBRATE\"/>",
+					"<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_WIFI_STATE\"/>",
+					"<uses-feature android:name=\"android.hardware.camera.autofocus\"/>",
+					"<uses-permission android:name=\"android.permission.SYSTEM_ALERT_WINDOW\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.RECEIVE_BOOT_COMPLETED\"/>",
+					"<uses-permission android:name=\"com.android.launcher.permission.UNINSTALL_SHORTCUT\"/>",
+					"<uses-permission android:name=\"android.permission.CAMERA\"/>",
+					"<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
+					"<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
+					"<uses-permission android:name=\"com.android.launcher.permission.INSTALL_SHORTCUT\"/>",
+					"<uses-permission android:name=\"android.permission.INTERNET\"/>",
+					"<uses-permission android:name=\"android.permission.READ_PHONE_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
+					"<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
+					"<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
+					"<uses-permission android:name=\"android.permission.CALL_PHONE\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_COARSE_LOCATION\"/>",
+					"<uses-feature android:name=\"android.hardware.camera\"/>",
+					"<uses-permission android:name=\"android.permission.ACCESS_FINE_LOCATION\"/>",
+					"<uses-permission android:name=\"android.permission.RECEIVE_USER_PRESENT\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_EXTERNAL_STORAGE\"/>",
+					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
+				]
 			},
-			"orientation": ["landscape-primary","landscape-secondary"],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
+			"orientation": [
+				"landscape-primary",
+				"landscape-secondary"
+			],/*应用支持的方向，portrait-primary：竖屏正方向；portrait-secondary：竖屏反方向；landscape-primary：横屏正方向；landscape-secondary：横屏反方向*/
 			"icons": {
 				"ios": {
 					"prerendered": true, /*应用图标是否已经高亮处理，在iOS6及以下设备上有效*/
@@ -131,7 +199,9 @@
 						"spotlight-retina": "unpackage/res/icons/58x58.png", /*iPhone高分屏Spotlight搜索程序图标，分辨率：58x58*/
 						"spotlight-retina7": "unpackage/res/icons/80x80.png",/*iPhone iOS7高分屏Spotlight搜索程序图标，分辨率：80x80*/
 						"settings-normal": "unpackage/res/icons/29x29.png", /*iPhone设置页面程序图标，分辨率：29x29*/
-						"settings-retina": "unpackage/res/icons/58x58.png","retina8":"unpackage/res/icons/180x180.png","settings-retina8":"unpackage/res/icons/87x87.png"
+						"settings-retina": "unpackage/res/icons/58x58.png",
+						"retina8": "unpackage/res/icons/180x180.png",
+						"settings-retina8": "unpackage/res/icons/87x87.png"
 					},
 					"ipad": {
 						"normal": "unpackage/res/icons/72x72.png", /*iPad普通屏幕程序图标，分辨率：72x72*/
@@ -151,23 +221,27 @@
 					"ldpi": "unpackage/res/icons/48x48.png", /*大屏程序图标，分辨率：48x48*/
 					"hdpi": "unpackage/res/icons/72x72.png", /*高分屏程序图标，分辨率：72x72*/
 					"xhdpi": "unpackage/res/icons/96x96.png",/*720P高分屏程序图标，分辨率：96x96*/
-					"xxhdpi": "unpackage/res/icons/144x144.png","xxxhdpi":"unpackage/res/icons/192x192.png"
+					"xxhdpi": "unpackage/res/icons/144x144.png",
+					"xxxhdpi": "unpackage/res/icons/192x192.png"
 				}
 			},
 			"splashscreen": {
 				"ios": {
 					"iphone": {
 						"default": "", /*iPhone3启动图片选，分辨率：320x480*/
-						"retina35": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/640×960.png",/*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
-						"retina40": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/640×1136.png","retina55":"/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/1242*2208.png","retina47":"/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/750×1334.png"
+						"retina35": "E:/项目文档/语音密码/闪屏-勿动/640×960.png",/*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
+						"retina40": "E:/项目文档/语音密码/闪屏-勿动/640×1136.png",
+						"retina55": "E:/项目文档/语音密码/闪屏-勿动/1242_2208.png",
+						"retina47": "E:/项目文档/语音密码/闪屏-勿动/750×1334.png",
+						"iphonex": "E:/项目文档/语音密码/闪屏-勿动/1125_2436.png"
 					},
 					"ipad": {
-						"portrait": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/IPAD 768x1004.png", /*iPad竖屏启动图片，分辨率：768x1004*/
-						"portrait-retina": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/IPAD 1526x2008.png",/*iPad高分屏竖屏图片，分辨率：1536x2008*/
+						"portrait": "E:/项目文档/语音密码/闪屏-勿动/IPAD 768x1004.png", /*iPad竖屏启动图片，分辨率：768x1004*/
+						"portrait-retina": "E:/项目文档/语音密码/闪屏-勿动/IPAD 1526x2008.png",/*iPad高分屏竖屏图片，分辨率：1536x2008*/
 						"landscape": "", /*iPad横屏启动图片，分辨率：1024x748*/
 						"landscape-retina": "", /*iPad高分屏横屏启动图片，分辨率：2048x1496*/
-						"portrait7": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/IPAD 768x1024.png", /*iPad iOS7竖屏启动图片，分辨率：768x1024*/
-						"portrait-retina7": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/IPAD 1536x2048.png",/*iPad iOS7高分屏竖屏图片，分辨率：1536x2048*/
+						"portrait7": "E:/项目文档/语音密码/闪屏-勿动/IPAD 768x1024.png", /*iPad iOS7竖屏启动图片，分辨率：768x1024*/
+						"portrait-retina7": "E:/项目文档/语音密码/闪屏-勿动/IPAD 1536x2048.png",/*iPad iOS7高分屏竖屏图片，分辨率：1536x2048*/
 						"landscape7": "", /*iPad iOS7横屏启动图片，分辨率：1024x768*/
 						"landscape-retina7": ""
 					}
@@ -175,12 +249,18 @@
 				"android": {
 					"mdpi": "", /*普通屏启动图片，分辨率：240x282*/
 					"ldpi": "", /*大屏启动图片，分辨率：320x442*/
-					"hdpi": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/android 480x762.png", /*高分屏启动图片，分辨率：480x762*/
-					"xhdpi": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/android 720x1242.png", /*720P高分屏启动图片，分辨率：720x1242*/
-					"xxhdpi": "/Users/sth/Documents/工作文档/语音密码/闪屏-勿动/android 1080x1882.png"
+					"hdpi": "E:/项目文档/语音密码/闪屏-勿动/android 480x762.png", /*高分屏启动图片，分辨率：480x762*/
+					"xhdpi": "E:/项目文档/语音密码/闪屏-勿动/android 720x1242.png", /*720P高分屏启动图片，分辨率：720x1242*/
+					"xxhdpi": "E:/项目文档/语音密码/闪屏-勿动/android 1080x1882.png"
 				}
 			}
-		},"ads":{"rp":false,"splash":false,"push":false,"spot":false}
+		},
+		"ads": {
+			"rp": false,
+			"splash": false,
+			"push": false,
+			"spot": false
+		}
 	},
 	"dependencies": {
 		"pages": {
@@ -262,6 +342,13 @@
 				"resources": [],
 				"refer": [
 					"html/login.html"
+				],
+				"priority": 0
+			},
+			"html/account-buyVip.html": {
+				"resources": [],
+				"refer": [
+					"html/account-buyVip.html"
 				],
 				"priority": 0
 			}
